# craft_hr

./: pyproject.toml
craft_hr/: hooks.py  modules.txt
craft_hr/accommodation/doctype/accommodation/: accommodation.js  accommodation.json  accommodation.py  test_accommodation.py
craft_hr/accommodation/doctype/accommodation_details/: accommodation_details.json  accommodation_details.py
craft_hr/accommodation/doctype/accommodation_transfer_form/: accommodation_transfer_form.js  accommodation_transfer_form.json  accommodation_transfer_form.py  test_accommodation_transfer_form.py
craft_hr/accommodation/doctype/accommodation_transfer_item/: accommodation_transfer_item.json  accommodation_transfer_item.py
craft_hr/accommodation/doctype/activity/: activity.json  activity.py
craft_hr/accommodation/doctype/bed/: bed.js  bed.json  bed.py  test_bed.py
craft_hr/accommodation/doctype/building/: building.js  building.json  building.py  test_building.py
craft_hr/api/: get_sif_details.py
craft_hr/events/: __init__.py  additional_salary.py  attendance.py  employee.py  employee_advance.py  get_leaves.py  leave_allocation.py  leave_application.py  salary_slip.py  salary_structure_assignment.py  shift_type.py
craft_hr/fixtures/: custom_field.json  module_def.json  property_setter.json  report.json
craft_hr/overrides/: leave_encashment.py  payroll_entry.py
craft_hr/public/js/: additional_salary.js  company.js  employee_advance.js  leave_allocation.js  leave_encashment.js  payroll_entry.js  shift_type.js
craft_hr/tasks/: daily.py
(+18 files in other folders)
